src/css/base.css
html {
  @apply text-xl leading-normal font-body bg-gray-800;
}

a {
  @apply text-blue-600 underline;
}

a:hover,
a:focus,
a:active {
  @apply text-blue-900;
}

.frame {
  @apply mx-auto px-4 max-w-4xl;
}

.page {
  @apply relative z-10 bg-white min-h-screen;
}

.page-footer {
  @apply sticky w-full bottom-0 left-0 text-sm bg-gray-800 text-gray-200;
}

.page-footer__wrapper {
  @apply py-8;
}

.header-list {
  @apply flex;
}

.header-list li {
  @apply whitespace-no-wrap;
}

.header-list li + li {
  @apply ml-2;
}

.markdown * + * {
  @apply mt-4;
}

[tabindex="-1"] {
  outline: none;
}

